--- a/maple-backend/appsettings.json
+++ b/maple-backend/appsettings.json
@@ -3,6 +3,12 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "File": {
+      "Path": "Logs\\log.txt",
+      "Append": true,
+      "FileSizeLimitBytes": 10485760,
+      "MaxRollingFiles": 5
     }
   },
   "AllowedHosts": "*"
