--- a/Maple.Application/Maple.Application.csproj
+++ b/Maple.Application/Maple.Application.csproj
@@ -4,6 +4,15 @@
     <ProjectReference Include="..\Maple.Domain\Maple.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0-preview.4.24266.19" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\Simulator\Commands\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
