--- a/Maple.Infrastructure/Maple.Infrastructure.csproj
+++ b/Maple.Infrastructure/Maple.Infrastructure.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\Maple.Application\Maple.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SpiceSharp" Version="3.1.9" />
+    <PackageReference Include="SpiceSharp-Parser" Version="3.1.5" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
