--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,15 @@
 name: Deploy
 
 on:
+  pull_request:
+    branches: [ master ]
+    paths-ignore:
+      - '.scripts/**'
+      - .gitignore
+      - CODE_OF_CONDUCT.md
+      - LICENSE
+      - README.md
+      
   workflow_call:
     inputs:
       environmentName:
